--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -24,25 +24,25 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
+    "@types/jest": "^24.0.21",
+    "@types/react": "^16.9.11",
     "@types/react-gtm-module": "^2.0.0",
     "@types/react-intl": "^3.0.0",
-    "@types/styled-components": "^4.1.19",
+    "@types/styled-components": "^4.1.20",
     "jest": "^24.9.0",
     "typescript": "^3.6.4"
   },
   "peerDependencies": {
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-gtm-module": "^2.0.8",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "react-intl": "^3.3.1",
     "@im-ui/carousel": "0.1.2",
     "@im-ui/icon": "0.2.4",
     "@im-ui/theme": "0.3.3",
     "@im-ui/typography": "0.2.2",
-    "@im-ui/utils": "0.4.1"
+    "@im-ui/utils": "0.4.1",
+    "react-intl": "^3.4.0"
   }
 }
