--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-swipeable": "^5.4.0",
     "semver": "^6.3.0",
     "styled-components": "^4.4.1",
-    "@n8tb1t/use-scroll-position": "1.0.40"
+    "@n8tb1t/use-scroll-position": "1.0.40",
+    "downshift": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
