--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5"
+    "@im-ui/theme": "^0.3.5",
+    "@im-ui/utils": "^0.4.3"
   }
 }
