--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5"
+    "@im-ui/theme": "^0.3.5",
+    "react-intl": "^3.4.0"
   }
 }
