--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/carousel",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -36,8 +36,8 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "react-swipeable": "^5.4.0",
     "@im-ui/theme": "^0.3.5",
-    "@im-ui/utils": "^0.4.2"
+    "@im-ui/utils": "^0.5.0",
+    "react-swipeable": "^5.4.0"
   }
 }
