--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/header",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -37,10 +37,10 @@
     "react-gtm-module": "^2.0.8"
   },
   "dependencies": {
-    "@n8tb1t/use-scroll-position": "1.0.40",
     "@im-ui/branding-logo": "^0.1.3",
     "@im-ui/icon": "^0.2.5",
     "@im-ui/theme": "^0.3.5",
-    "@im-ui/utils": "^0.4.2"
+    "@im-ui/utils": "^0.5.0",
+    "@n8tb1t/use-scroll-position": "1.0.40"
   }
 }
