--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/utils",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -31,10 +31,10 @@
   },
   "peerDependencies": {
     "react": "^16.11.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "react-intl": "^3.4.0"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5",
-    "react-intl": "^3.4.0"
+    "@im-ui/theme": "^0.3.5"
   }
 }
