--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-gtm-module": "^2.0.8",
     "react-swipeable": "^5.4.0",
     "semver": "^6.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "downshift": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
