--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/label",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -34,6 +34,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5"
+    "@im-ui/theme": "^0.3.6",
+    "@im-ui/utils": "^0.5.1"
   }
 }
