--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/im-components",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "The components library for the instamotion website",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
     "clean:sb-dist": "rm -r storybook-dist || true",
     "clean:components": "bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
     "bootstrap": "bolt",
+    "typecheck": "bolt ws exec -- tsc --noEmit -p .",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
