--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/label",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -34,7 +32,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.6",
+    "@im-ui/theme": "^0.3.7",
     "@im-ui/utils": "^0.5.1"
   }
 }
