--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@im-ui/branding-logo",
   "version": "0.1.5",
-  "main": "dist/cjs/main.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
   "author": "InstaMotion Retail GmbH",
