--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -29,10 +29,7 @@
   },
   "dependencies": {
     "@im-ui/icon": "^0.3.0",
-    "@im-ui/theme": "^1.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.8"
+    "@im-ui/theme": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^16.11.0",
