--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -36,6 +36,7 @@
     "@im-ui/button": "^0.4.0",
     "@im-ui/label": "^0.1.8",
     "@im-ui/theme": "^1.0.0",
-    "@im-ui/utils": "^0.5.2"
+    "@im-ui/utils": "^0.5.2",
+    "@im-ui/icon": "^0.3.0"
   }
 }
