--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -20,7 +20,9 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
