--- a/packages/howItWorks/package.json
+++ b/packages/howItWorks/package.json
@@ -13,7 +13,16 @@
   ],
   "repository": "git@github.com:Instamotion/im-components.git",
   "license": "MIT",
-  "files": ["dist"],
+  "scripts": {
+    "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
+    "clean": "rm -rf ./dist",
+    "compile:esm": "tsc -p build/tsconfig.esm.json",
+    "compile:cjs": "tsc -p build/tsconfig.cjs.json",
+    "prepublishOnly": "bolt build"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@im-ui/theme": "^1.0.0 ",
     "@im-ui/icon": "^0.4.0",
