--- a/packages/ribbon/package.json
+++ b/packages/ribbon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@im-ui/info-item",
+  "name": "@im-ui/ribbon",
   "version": "0.0.1",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
@@ -24,11 +24,10 @@
     "dist"
   ],
   "dependencies": {
-    "@im-ui/theme": "^0.3.4",
-    "@im-ui/utils": "^0.4.2",
-    "@im-ui/icon": "^0.5.0"
+    "@im-ui/theme": "^0.3.4"
   },
   "devDependencies": {
+    "@im-ui/utils": "^0.4.2",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
