--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -38,6 +38,8 @@
   "peerDependencies": {
     "react": "^16.11.0",
     "react-intl": "^3.4.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "@types/react-tabs": "^2.3.1",
+    "react-tabs": "^3.1.0"
   }
 }
