--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-alice-carousel": "^1.15.3",
     "react-gtm-module": "^2.0.8",
     "react-swipeable": "^5.4.0",
+    "react-tabs": "^3.1.0",
     "semver": "^6.3.0",
     "styled-components": "^4.4.1"
   },
@@ -58,6 +59,7 @@
     "@types/react": "^16.9.11",
     "@types/react-gtm-module": "^2.0.0",
     "@types/react-intl": "^3.0.0",
+    "@types/react-tabs": "^2.3.1",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.20",
     "@types/webpack": "^4.39.8",
