--- a/packages/favoriteStatus/package.json
+++ b/packages/favoriteStatus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/favorite-status",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -20,9 +20,7 @@
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@im-ui/icon": "^0.5.0",
     "@im-ui/theme": "^1.0.0"
